All views done, filtering for specific subject is not done. A couple bugs but nothing too serious

--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,9 @@
   font-size: 1vw;
   padding: 1vw;
   font-weight: bold;
+  cursor: pointer;
+  color: #551a8b;
+  text-decoration: underline;
 }
 .filter-list.expanded {
   padding-right: 3vw;
